--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>web.lab</groupId>
 	<artifactId>security</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1</version>
 	<name>SecurityApp</name>
 	<description>Aplikacija za demonstriranje security ranjivosti</description>
 	<url/>
